TDH: refactor rich-text

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,7 +10,7 @@ layout: default
                     {{ page.title }}
                 </h1>
             </header>
-            <div class="about__content a a-fi a-del-250">
+            <div class="about__content rich-text a a-fi a-del-250">
                 {{ content }}
             </div>
         </div>
