--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
                     {{ page.title }}
                 </h1>
             </header>
-            <div class="post__content">
+            <div class="post__content rich-text">
                 {{ content }}
             </div>
         </div>
