TDH: update prices, set title and meta on downcase

--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -7,7 +7,7 @@
     </figure>
     <div class="tile__bg tr-stag js-tr">
         <header class="tile__header">
-            <h3 class="tile__title tr-stag js-tr">{{ entry.title }}</h3>
+            <h3 class="tile__title tr-stag js-tr">{{ entry.title | downcase }}</h3>
         </header>
         <div class="tile__txt tr-stag js-tr">
             <div class="tile__amount tr-stag js-tr">{{ entry.amount }}</div>
