TDH: refine transitions | copy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer a a-fi-up a-del-300">
     <div class="container">
-        ziris – alle rechten voorbehouden – © 2019
+        ziris – alle rechten voorbehouden – © {{ 'now' | date: "%Y" }}
     </div>
 </footer>
