--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
 
 <body class="{{ page.body }}">
 
+    <!-- APP -->
     <main class="app">
         {% include header.html %}
         <div class="content">
@@ -43,7 +44,9 @@
     </main>
 
     <!-- JAVASCRIPT -->
+    {% if page.google-maps %}
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzOr-5E1X-ZVgYTGjgSANxyFWP0JPCRNI"></script>
+    {% endif %}
     <script src="/assets/js/plugins.bundle.min.js"></script>
     <script src="/assets/js/generic.js"></script>
     <script src="/assets/js/form.js"></script>
