update meta row | replace , to .

--- a/_includes/meta__row.html
+++ b/_includes/meta__row.html
@@ -2,6 +2,10 @@
     <p class="meta__data-label">{{ include.label }}</p>
     <p class="meta__data-entry js-set-data" id="course-{{ include.entry }}">
         {% capture entry %}{{ include.entry }}{% endcapture %}
+        {% if entry == 'price' %}
+        {{ page[entry] | replace: ',', '.' }}
+        {% else %}
         {{ page[entry] }}
+        {% endif %}
     </p>
 </div>
