--- a/_sass/settings.variables.scss
+++ b/_sass/settings.variables.scss
@@ -4,6 +4,7 @@
 
 $ease:						cubic-bezier(0.700, 0.270, 0.270, 1);
 $ease-expo:			        cubic-bezier(1.000, 0.000, 0.000, 1);
+$ease-out:			        cubic-bezier(0.200, 0.900, 0.400, 1);
 $fade-all: 					all 300ms $ease;
 $fade-link:                 all 200ms $ease;
 
