--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,9 +15,9 @@ layout: default
             </div>
         </div>
     </div>
-    <div class="container">
-        <img class="post__img js-scroll-magic tr-stag js-tr" src="{{ page.img }}" alt="{{ page.caption }}" />
-        <figcaption class="js-scroll-magic tr-stag js-tr" hook="0.95">{{ page.caption }}</figcaption>
+    <div class="container js-scroll-magic">
+        <img class="post__img tr-stag js-tr" src="{{ page.img }}" alt="{{ page.caption }}" />
+        <figcaption class="tr-stag js-tr">{{ page.caption }}</figcaption>
     </div>
 </section>
 
