--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -1,4 +1,4 @@
-<a class="tile js-scroll-magic" hook="0.94" href="{{ entry.url }}">
+<a class="tile js-scroll-magic" href="{{ entry.url }}">
     <figure class="tile__img-container tr-stag js-tr">
         <img class="tile__img" src="{{ entry.thumb }}" />
         {% if entry.type %}
