#fix html validator issues

--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -1,6 +1,6 @@
 <a class="tile js-scroll-magic" href="{{ entry.url }}">
     <figure class="tile__img-container tr-stag js-tr">
-        <img class="tile__img" src="{{ entry.thumb }}" />
+        <img class="tile__img" src="{{ entry.thumb }}" alt="{{ entry.title }}" />
         {% if entry.type %}
             <div class="tile__type">{{ entry.type }}</div>
         {% endif %}
