--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,10 +15,10 @@ layout: default
             </div>
         </div>
     </div>
-    <div class="container js-scroll-magic">
+    <figure class="container js-scroll-magic">
         <img class="post__img tr-stag js-tr" src="{{ page.img }}" alt="{{ page.caption }}" />
         <figcaption class="tr-stag js-tr">{{ page.caption }}</figcaption>
-    </div>
+    </figure>
 </section>
 
 {% include meta.html %}
