edit section to div

--- a/_includes/related.html
+++ b/_includes/related.html
@@ -11,7 +11,7 @@
 {% endif %}
 
 {% if category.size > 1 %}
-<section class="courses pt-0">
+<div class="courses pt-0">
     <div class="courses__container">
         <div class="container container--m">
             <section class="courses__category">
@@ -30,5 +30,5 @@
             </section>
         </div>
     </div>
-</section>
+</div>
 {% endif %}
