--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,4 +1,4 @@
-<section class="meta js-scroll-magic">
+<div class="meta js-scroll-magic">
     <div class="container container--m">
         <div class="meta__container tr-stag js-tr">
             {% if page.type %}
@@ -14,4 +14,4 @@
             {% include meta__row.html label='locatie' entry='location' %}
         </div>
     </div>
-</section>
+</div>
