--- a/_sass/settings.fonts.scss
+++ b/_sass/settings.fonts.scss
@@ -10,42 +10,42 @@
 // custom font
 @font-face {
 	font-family: 'Ziris';
-	src: url('/assets/fonts/500.ttf');
+	src: url('/assets/fonts/500.woff') format('woff');
 	font-weight: 500;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Ziris';
-	src: url('/assets/fonts/500i.ttf');
+	src: url('/assets/fonts/500i.woff') format('woff');
 	font-weight: 500;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: 'Ziris';
-	src: url('/assets/fonts/600.ttf');
+	src: url('/assets/fonts/600.woff') format('woff');
 	font-weight: 600;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Ziris';
-	src: url('/assets/fonts/700.ttf');
+	src: url('/assets/fonts/700.woff') format('woff');
 	font-weight: 700;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Ziris';
-	src: url('/assets/fonts/900.ttf');
+	src: url('/assets/fonts/900.woff') format('woff');
 	font-weight: 900;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Ziris';
-	src: url('/assets/fonts/900i.ttf');
+	src: url('/assets/fonts/900i.woff') format('woff');
 	font-weight: 900;
 	font-style: italic;
 }
