--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,15 @@
     <meta charset="utf-8" />
 
     <!-- META DATA -->
-    <meta name="description" content="Ziris biedt cursussen aan op het gebied van kunstgeschiedenis in combinatie met fotografie en beoogt een verbinding te maken tussen kunsttheorie en praktijk." />
+    <meta name="description" content="{{ page.description }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- SOCIAL MEDIA -->
-    <meta property="og:title" content="ziris | kunst & fotografie" />
+    <meta property="og:title" content="{{ page.title }}{% unless page.layout=='default' %} | ziris{% endunless %}" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ziris.nl" />
-    <meta property="og:image" content="https://ziris.netlify.com/assets/img/ziris-og-image.png" />
-    <meta property="og:description" content="Ziris biedt cursussen aan op het gebied van kunstgeschiedenis in combinatie met fotografie en beoogt een verbinding te maken tussen kunsttheorie en praktijk." />
+    <meta property="og:url" content="https://ziris.nl{{ page.url | remove: '.html' }}" />
+    <meta property="og:image" content="https://ziris.nl{{ page.img }}" />
+    <meta property="og:description" content="{{ page.description }}" />
 
     <!-- FAVICON -->
     <link rel="icon" type="image/png" href="/favicon.ico" />
