--- a/_sass/components.map.scss
+++ b/_sass/components.map.scss
@@ -88,7 +88,7 @@
     @include font(22px, 900, $lh-title);
 
     @include sm {
-        font-size: calculate-rem(28px);
+        font-size: toRem(28px);
     }
 }
 
