--- a/_sass/components.section-header.scss
+++ b/_sass/components.section-header.scss
@@ -9,21 +9,21 @@
     @include font(36px, 900, $lh-title);
 
     @include sm {
-        font-size: calculate-rem(60px);
+        font-size: toRem(60px);
     }
 }
 
 .section-header__title--small {
-    font-size: calculate-rem(32px);
+    font-size: toRem(32px);
 
     @include sm {
-        font-size: calculate-rem(40px);
+        font-size: toRem(40px);
     }
 }
 
 .section-header__title--small-sm {
     @include sm-ex {
-        font-size: calculate-rem(40px);
+        font-size: toRem(40px);
     }
 }
 
@@ -33,6 +33,6 @@
     @include font(24px, 400, $lh-title);
 
     @include sm {
-        font-size: calculate-rem(32px);
+        font-size: toRem(32px);
     }
 }
