--- a/_sass/components.tile.scss
+++ b/_sass/components.tile.scss
@@ -59,7 +59,7 @@
     @include font(28px, 900, $lh-title);
 
     @include md {
-        font-size: calculate-rem(36px);
+        font-size: toRem(36px);
     }
 }
 
@@ -71,12 +71,12 @@
 }
 
 .tile__description {
-    font-family: serif;
+    font-family: $serif;
     @include font(16px, normal, $lh-copy);
-    color: $grey-2;
+    color: $grey-3;
 
     @include md {
-        font-size: calculate-rem(18px);
+        font-size: toRem(18px);
     }
 }
 
@@ -90,6 +90,6 @@
     @include font(32px, 500, $lh-title);
 
     @include md {
-        font-size: calculate-rem(40px);
+        font-size: toRem(40px);
     }
 }
