--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,6 +23,7 @@
 @import "components.art";
 @import "components.buttons";
 @import "components.courses";
+@import "components.cursor";
 @import "components.cta";
 @import "components.discover";
 @import "components.footer";
