--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
                     {{ nav.title }}
                 </span>
                 {% else %}
-                <span class="header__item hidden-xs">
+                <span class="header__item header__item--link hidden-xs">
                     {{ nav.title }}
                 </span>
                 <span class="header__item visible-xs {{ nav.class }}">
