#fix body height bug

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 <body class="{{ page.body }}">
 
     <!-- APP -->
-    <main class="app">
+    <main>
         {% include header.html %}
         <div class="content">
             {{ content }}
