update scroll reveal | not using scrollMagic

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,4 +1,4 @@
-<section class="cta js-scroll-magic tr-stag js-tr">
+<section class="cta js-scroll tr-stag js-tr">
     <div class="container container--s">
         <header>
             <label class="cta__label tr-stag js-tr">schrijf je in voor:</label>
