--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,4 +1,4 @@
-<div class="meta js-scroll-magic">
+<div class="meta js-scroll">
     <div class="container container--m">
         <div class="meta__container tr-stag js-tr">
             {% if page.type %}
