--- a/_includes/related.html
+++ b/_includes/related.html
@@ -15,7 +15,7 @@
     <div class="courses__container">
         <div class="container container--m">
             <section class="courses__category">
-                <h2 class="courses__category-title js-scroll-magic tr-stag js-tr">
+                <h2 class="courses__category-title js-scroll tr-stag js-tr">
                     meer cursussen voor {{ page.category }}
                 </h2>
                 <div class="courses__grid">
