--- a/_includes/courses__category.html
+++ b/_includes/courses__category.html
@@ -1,5 +1,5 @@
 <section class="courses__category">
-    <header class="js-scroll-magic">
+    <header class="js-scroll">
         <h2 class="courses__category-title tr-stag js-tr">{{ include.category }}</h2>
     </header>
     <div class="courses__grid">
