--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
             </div>
         </div>
     </div>
-    <figure class="container js-scroll-magic">
+    <figure class="container js-scroll">
         <img class="post__img tr-stag js-tr" src="{{ page.img }}" alt="{{ page.caption }}" />
         <figcaption class="tr-stag js-tr">{{ page.caption }}</figcaption>
     </figure>
