reveal on scroll with richt text

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="section">
+<section class="section pb-8 pb-12-sm">
     <div class="container">
         <div class="about__container">
             <header class="about__header a a-fi">
@@ -10,7 +10,7 @@ layout: default
                     {{ page.title }}
                 </h1>
             </header>
-            <div class="about__content rich-text a a-fi a-del-250">
+            <div class="about__content rich-text a a-fi a-del-250 js-scroll-rt">
                 {{ content }}
             </div>
         </div>
