update discover hover transition

--- a/_sass/components.discover.scss
+++ b/_sass/components.discover.scss
@@ -26,7 +26,7 @@
 
 .discover__txt {
     margin-bottom: 4px;
-    transition: $fade-all;
+    transition: all 700ms $ease-out;
 }
 
 .discover__line {
