--- a/_sass/components.post.scss
+++ b/_sass/components.post.scss
@@ -57,5 +57,13 @@
 }
 
 .post__img {
-    width: 100%;
+    position: relative;
+    min-height: 50vw;
+
+    &:before {
+        content: '';
+        @include full(absolute);
+        z-index: -1;
+        background-color: $grey-8;
+    }
 }
