--- a/_sass/components.member.scss
+++ b/_sass/components.member.scss
@@ -38,6 +38,10 @@
     @include sm {
         font-size: toRem(22px);
     }
+
+    @include md-ex {
+        font-size: toRem(18px);
+    }
 }
 
 .member__img {
