--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,6 +27,7 @@
 @import "components.cta";
 @import "components.discover";
 @import "components.footer";
+@import "components.hamburger";
 @import "components.header";
 @import "components.intro";
 @import "components.map";
