--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,8 +30,8 @@
                 </span>
             </a>
 
-            <button class="header__item header__item--icon visible-xs js-nav-toggle">
-                <div class="hamburger">
+            <button class="header__item header__item--icon visible-xs">
+                <div class="hamburger js-nav-toggle">
                     <span class="hamburger__line"></span>
                     <span class="hamburger__line"></span>
                     <span class="hamburger__line"></span>
@@ -39,4 +39,12 @@
             </button>
         </nav>
     </div>
+</header>
+<header class="header-mobile js-nav">
+    <nav>
+        <a href="/galerie" aria-label="galerie" class="header-mobile__item js-nav-item">galerie</a>
+        <a href="/cursussen" aria-label="cursussen" class="header-mobile__item js-nav-item">cursussen</a>
+        <a href="/over-ziris" aria-label="over ziris" class="header-mobile__item js-nav-item">over ziris</a>
+        <a href="/contact" aria-label="contact" class="header-mobile__item js-nav-item">contact</a>
+    </nav>
 </header>
