--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@
     <script src="/assets/js/generic.js"></script>
     <script src="/assets/js/form.js"></script>
     <script src="/assets/js/map.js"></script>
+    <script src="/assets/js/nav.js"></script>
     <script src="/assets/js/cursor.js"></script>
     <script>
         if (window.netlifyIdentity) {
