add gallery page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer a a-fi-up a-del-300">
+<footer class="footer {{ page.footer }} a a-fi-up a-del-300">
     <div class="container">
         ziris – alle rechten voorbehouden – © {{ 'now' | date: "%Y" }}
     </div>
