--- a/_sass/utilities.tachyons.scss
+++ b/_sass/utilities.tachyons.scss
@@ -603,6 +603,8 @@
      Seen or not
 --------------------*/
 
+.v-hidden { visibility: hidden; }
+
 // opacities
 // ----------------------------------------------------------------------
 .o-100 { opacity: 1;    }
