--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,10 +16,10 @@ layout: default
         </div>
     </div>
     <div class="container js-scroll">
-        <figure class="post__img tr-stag js-tr">
-            <img class="w-100" src="{{ page.img }}" alt="{{ page.caption }}" />
+        <figure class="tr-stag js-tr">
+            <img class="post__img" src="{{ page.img }}" alt="{{ page.caption }}" />
+            <figcaption class="tr-stag js-tr">{{ page.caption }}</figcaption>
         </figure>
-        <figcaption class="tr-stag js-tr">{{ page.caption }}</figcaption>
     </div>
 </section>
 
