--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,12 +15,10 @@ layout: default
             </div>
         </div>
     </div>
-    <div class="container js-scroll">
-        <figure class="tr-stag js-tr">
-            <img class="post__img" src="{{ page.img }}" alt="{{ page.caption }}" />
-            <figcaption class="tr-stag js-tr">{{ page.caption }}</figcaption>
-        </figure>
-    </div>
+    <figure class="container js-scroll">
+        <img class="post__img tr-stag js-tr" src="{{ page.img }}" alt="{{ page.caption }}" />
+        <figcaption class="tr-stag js-tr">{{ page.caption }}</figcaption>
+    </figure>
 </section>
 
 {% include meta.html %}
