update nav header position

--- a/_sass/components.header.scss
+++ b/_sass/components.header.scss
@@ -4,6 +4,10 @@
     position: absolute;
     width: 100%;
     z-index: 999;
+
+    &.is-active {
+        position: fixed;
+    }
 }
 
 .header__container {
