--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header {{ page.header }} a a-fi-down a-del-150">
+<header class="header {{ page.header }} js-header a a-fi-down a-del-150">
     <div class="container header__container">
         <a href="/" aria-label="Logo Ziris">
             <div class="header__logo">
