--- a/_sass/elements.base.scss
+++ b/_sass/elements.base.scss
@@ -4,6 +4,9 @@ body {
     font-family: $sans-serif;
     font-size: 16px;
     font-weight: normal;
+    font-kerning: normal;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
     line-height: $lh-copy;
     color: $brand;
     height: 100%;
