--- a/_sass/generic.reset.scss
+++ b/_sass/generic.reset.scss
@@ -49,13 +49,13 @@ section,
 time,
 audio,
 video {
-  padding: 0;
-  border: 0;
-  margin: 0;
-  background: transparent;
-  font-size: 100%;
-  font-weight: inherit;
-  vertical-align: baseline;
+    padding: 0;
+    border: 0;
+    margin: 0;
+    background: transparent;
+    font-size: 100%;
+    font-weight: inherit;
+    vertical-align: baseline;
 }
 
 article,
@@ -65,92 +65,93 @@ footer,
 header,
 nav,
 section {
-  display: block;
+    display: block;
 }
 
 html {
-  box-sizing: border-box;
-  overflow-y: scroll;
+    box-sizing: border-box;
+    overflow-y: scroll;
 }
 
 html,
 body {
-  background-color: #fff;
-  color: #000;
+    background-color: #fff;
+    color: #000;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+    box-sizing: inherit;
+    -webkit-tap-highlight-color: transparent;
 }
 
 img,
 object {
-  max-width: 100%;
-  vertical-align: middle;
+    max-width: 100%;
+    vertical-align: middle;
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 th {
-  font-weight: bold;
-  vertical-align: bottom;
+    font-weight: bold;
+    vertical-align: bottom;
 }
 
 td {
-  font-weight: normal;
-  vertical-align: top;
+    font-weight: normal;
+    vertical-align: top;
 }
 
 input,
 select {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 input[type='radio'] {
-  vertical-align: text-bottom;
+    vertical-align: text-bottom;
 }
 
 input[type='checkbox'] {
-  vertical-align: bottom;
+    vertical-align: bottom;
 }
 
 strong {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 label,
 input[type='file'] {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 input,
 select,
 textarea {
-  border: 0;
-  margin: 0;
+    border: 0;
+    margin: 0;
 }
 
 button,
 input[type='button'],
 input[type='submit'] {
-  padding: 0;
-  border: 0;
-  border-radius: 0;
-  margin: 0;
-  background: transparent;
-  cursor: pointer;
+    padding: 0;
+    border: 0;
+    border-radius: 0;
+    margin: 0;
+    background: transparent;
+    cursor: pointer;
 }
 
 button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
+    padding: 0;
+    border: 0;
 }
