--- a/_layouts/galerie.html
+++ b/_layouts/galerie.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 
-<section class="section pb-0">
-    <h1 class="pos-a v-hidden">{{ page.title }}</h1>
+<h1 class="pos-a v-hidden">{{ page.title }}</h1>
 
-    <div class="gallery js-gallery">
-        <div class="gallery__container">
+<div class="gallery js-gallery a a-fi-right-200px a-dur-1500">
+    <div class="gallery__container">
+        <div class="gallery__scroll-container">
             {% for image in site.static_files reversed %}
             {% if image.path contains '/assets/img' %}
             <img class="gallery__img" src="{{ image.path }}" alt="{{ image.path }}" />
@@ -14,4 +14,4 @@ layout: default
             {% endfor %}
         </div>
     </div>
-</section>
+</div>
