--- a/_sass/utilities.tachyons.scss
+++ b/_sass/utilities.tachyons.scss
@@ -784,10 +784,11 @@
 	}
 }
 
-// word wraps
+// misc
 // ----------------------------------------------------------------------
 .no-wrap {white-space: nowrap;}
 .break-word {word-wrap: break-word;}
+.uppercase {text-transform: uppercase;}
 
 
 
